tests/paczka1/small_fuzzy/50183393.err
Error in line 2: oObFb S940 15,70
Error in line 1: 2wbUHTRmj A783 4,8
Error in line 4: BRkEUyoC S880 18,2
Error in line 9: oObFb S940 67,4
